--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="banner">
+
         <div class="header">
             <div class="logo">Header Logo</div>
             <ul>
@@ -17,10 +18,15 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div>This website is awesome</div>
-        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lover contrast</div>
-        <button>Sign up</button>
-        <img src="#"alt="this is a placeholder for an image" width="300px" height="150px">
+        <div class="hero">
+            <div class="hero-text">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lover contrast</div>
+                <button>Sign up</button>
+            </div>
+            <img src="#"alt="this is a placeholder for an image" width="300px" height="150px">
+        </div>
+
     </div>
     <div class="info">
         <div>Some random information.</div>
