finish header styling in css

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                 <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lover contrast</div>
                 <button>Sign up</button>
             </div>
-            <img src="#"alt="this is a placeholder for an image" width="300px" height="150px">
+            <img class="hero-image" src="#"alt="this is a placeholder for an image" width="300px" height="150px">
         </div>
 
     </div>
+
     <div class="info">
         <div>Some random information.</div>
         <div class="images">
@@ -39,17 +40,21 @@
             </ul>
         </div>
     </div>
+
     <div class="quote">
         <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
         <div>-Thor, God of Thunder</div>
     </div>
+
     <div class="action">
         <div>Call to action! It's time!</div>
         <div>Sign up for our oriduct by clicking that button right over there!</div>
         <button>Sign up</button>
     </div>
+
     <div class="footer">
         Copyright c The Odin Project 2021
     </div>
+
 </body>
 </html>
