Styleized info block, refactor index.html, refactor banner block

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="header">
             <div class="logo">Header Logo</div>
-            <ul>
+            <ul class="header-link">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
@@ -30,15 +30,16 @@
     </div>
 
     <div class="info">
+
         <div>Some random information.</div>
-        <div class="images">
-            <ul>
-                <li><img src="#">this is some subtext under an illustration or image</li>
-                <li><img src="#">this is some subtext under an illustration or image</li>
-                <li><img src="#">this is some subtext under an illustration or image</li>
-                <li><img src="#">this is some subtext under an illustration or image</li>
-            </ul>
-        </div>
+
+        <ul class="images">
+            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+        </ul>
+
     </div>
 
     <div class="quote">
