--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </div>
 
     <div class="quote">
-        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
-        <div>-Thor, God of Thunder</div>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="sign">-Thor, God of Thunder</p>
     </div>
 
     <div class="action">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our oriduct by clicking that button right over there!</div>
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our oriduct by clicking that button right over there!</p>
         <button>Sign up</button>
     </div>
 
