stilize action block, refactor html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
     </div>
 
     <div class="action">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our oriduct by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="call-to-action">
+            <p><strong>Call to action! It's time!</strong><br>
+            Sign up for our oriduct by clicking that button right over there!</p>
+        </div>
+        <button class="call">Sign up</button>
     </div>
 
     <div class="footer">
