Add company logo to landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="banner">
 
         <div class="header">
-            <div class="logo">Header Logo</div>
+            <img class="logo" src="./images/transparent-logo.png" alt="Bro Down Games Logo" width="200" height="100">
             <ul class="header-link">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
