--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="hero">
             <div class="hero-text">
                 <div class="main-text">This website is awesome</div>
-                <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lover contrast</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <img class="hero-image" src="#"alt="this is a placeholder for an image" width="300px" height="150px">
+            <img class="hero-image" src="#"alt="this is a placeholder for an image" width="600px" height="300px">
         </div>
 
     </div>
@@ -34,10 +34,10 @@
         <div>Some random information.</div>
 
         <ul class="images">
-            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
-            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
-            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
-            <li><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li class="images-child"><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li class="images-child"><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li class="images-child"><img class="info-image" src="#">this is some subtext under an illustration or image</li>
+            <li class="images-child"><img class="info-image" src="#">this is some subtext under an illustration or image</li>
         </ul>
 
     </div>
@@ -56,7 +56,8 @@
     </div>
 
     <div class="footer">
-        Copyright c The Odin Project 2021
+        <p>Copyright  <span>&copy;</span>  The Odin Project 2021
+        </p>
     </div>
 
 </body>
