--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <img class="hero-image" src="#"alt="this is a placeholder for an image" width="600px" height="300px">
+            <img class="hero-image" src="./images/cover-pic.jpg"alt="this is a placeholder for an image" width="600px" height="300px">
         </div>
 
     </div>
